# diskripr

./: .gitignore  CHANGELOG.md  pyproject.toml  tox.ini
docs/: conf.py
docs/_build/html/: .buildinfo  .buildinfo.bak  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: changelog.doctree  environment.pickle  (+1 more)
docs/_static/: diskripr-queue-schema.json
docs/api/: cli.rst  config.rst  index.rst  models.rst  pipeline.rst  queue.rst  util.rst
docs/concepts/: drivers.rst  heuristics.rst  index.rst  jellyfin_naming.rst  pipeline.rst  queue.rst
docs/guide/: batch-ripping.rst  getting-started.rst  index.rst  installation.rst
src/diskripr/: __init__.py  cli.py  config.py  models.py  pipeline.py  queue.py  schema.py
src/diskripr/drivers/: __init__.py  base.py  ffprobe.py  handbrake.py  ifo.py  lsdvd.py  makemkv.py
src/diskripr/util/: __init__.py  filesystem.py  heuristics.py  jellyfin_filesystem.py  progress.py
tests/: conftest.py  test_cli.py  test_config.py  test_driver_ffprobe.py  test_driver_handbrake.py  test_driver_ifo.py  test_driver_lsdvd.py  test_driver_makemkv.py  test_filesystem.py  test_heuristics.py  test_jellyfin_filesystem.py  test_models.py  test_pipeline.py  test_queue.py  test_schema.py
tests/data/ffprobe/: dvd_streams.json
tests/data/handbrake/: encode_progress.txt
tests/data/lsdvd/: disc_encrypted.txt  disc_normal.txt  multi_vts.txt  shared_vts.txt
tests/data/makemkv/: rip_progress.txt  scan_drives.txt  scan_titles.txt
tests/test_data/: encoded.mkv
(+43 files in other folders)
